--- a/config.yml
+++ b/config.yml
@@ -3,4 +3,4 @@ channels: ["#chat"]
 nick: mccs-bot
 realname: MCCS Bot
 prefix: ^\?
-plugins: [Hello, DiceRoll, Ligaf, Plus, Spoonerize, Learn, Summon]
+plugins: [Hello, DiceRoll, Ligaf, Plus, Spoonerize, Learn, Summon, Join]
